--- a/web/src/components/features/info/infos/infoBase/infoBase.scss
+++ b/web/src/components/features/info/infos/infoBase/infoBase.scss
@@ -7,6 +7,8 @@
   justify-content: space-between;
 
   #info-title {
+    text-align: left;
+    white-space: nowrap;
     color: white;
     text-align: start;
     font-family: var(--custom-info-font-family);
@@ -19,6 +21,8 @@
   }
 
   #info-content {
+    text-align: right;
+    white-space: nowrap;
     width: 100%;
     height: 100%;
     display: flex;
